<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="android.app.printerapp.login.Login">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/app_logo"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/printbook_logo"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:gravity="center_horizontal"
            app:srcCompat="@drawable/app_logo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="427dp"
        android:layout_below="@id/app_logo"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="359dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/prompt_password"/>
            </android.support.design.widget.TextInputLayout>

            <AutoCompleteTextView
                android:id="@+id/username"
                android:layout_width="359dp"
                android:hint="@string/prompt_username"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="359dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_login"
                android:layout_marginTop="25dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorWhite"/>

            <Button
                android:id="@+id/signup_button"
                android:layout_width="358dp"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_signup"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimaryDark"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</LinearLayout>
